# wordle-solver

./: CMakeLists.txt  LICENSE  README.md  common_helpers.h  frequencies.sh  game_modes.cpp  game_modes.h  guess_nums.txt  guess_nums_6.csv  guess_nums_6.txt  guess_nums_7.csv  main.cpp  quordle_checker.h  quordle_helpers.h  quordle_rules.h  quordle_solver.cpp  quordle_solver.h  scoring.sh  wordle_buffer.h  wordle_checker.cpp  wordle_checker.h  wordle_checker_test.cpp  wordle_helpers.h  wordle_rules.h  wordle_selector.cpp  wordle_selector.h  wordle_selectors.cpp  wordle_selectors.cpp~  wordle_selectors.h  wordle_solver.cpp  wordle_solver.h  wordle_test.cpp  wordle_trie.cpp  wordle_trie.h  wordlist_wordle_solver.cpp  wordlist_wordle_solver.h
